jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins

spec:
  selector:
    app: jenkins

  ports:
  - name: http
    port: 8080
    targetPort: 8080

  - name: agent
    port: 50000
    targetPort: 50000

  type: ClusterIP
